--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "axios": "^0.27.2",
     "express": "^4.18.1",
-    "http-status-codes": "^2.2.0",
-    "lodash.set": "^4.3.2"
+    "http-status-codes": "^2.2.0"
   }
 }
