--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "bunyan": "^1.8.15",
     "express": "^4.18.1",
+    "graceful-shutdown-express": "^2.0.1",
     "http-status-codes": "^2.2.0"
   }
 }
